--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Blog Single | Corlate</title>
+    <title>Контакты</title>
     
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,13 +27,12 @@
 </head><!--/head-->
 
 <body>
-
 <header id="header">
     <div class="top-bar">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-xs-4">
-                    <div class="top-number"><p><i class="fa fa-phone-square"></i>  +0123 456 70 90</p></div>
+                    <div class="top-number"><p><i class="fa fa-phone-square"></i>  +8353 43 217 79</p></div>
                 </div>
                 <div class="col-sm-6 col-xs-8 text-right">
                     <!--<div class="social">-->
@@ -75,20 +74,20 @@
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Главная</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Услуги <i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="service-1.html">По ведомствам</a></li>
+                            <li><a href="service-1.html">Жизненные ситуации</a></li>
+                            <li><a href="service-1.html">Все услуги</a></li>
+                            <li><a href="pre-entry.html">Записаться в очередь</a></li>
+                        </ul>
+                    </li>
                     <li><a href="about-us.html">О нас</a></li>
-                    <li><a href="services.html">Услуги</a></li>
-                    <li><a href="portfolio.html">Документы</a></li>
-                    <!--<li class="dropdown">-->
-                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>-->
-                    <!--<ul class="dropdown-menu">-->
-                    <!--<li><a href="blog-item.html">Blog Single</a></li>-->
-                    <!--<li><a href="pricing.html">Pricing</a></li>-->
-                    <!--<li><a href="404.html">404</a></li>-->
-                    <!--<li><a href="shortcodes.html">Shortcodes</a></li>-->
-                    <!--</ul>-->
-                    <!--</li>-->
+                    <li><a href="documents.html">Документы</a></li>
+                    <li><a href="gallery.html">Фотогалерея</a></li>
                     <li><a href="news.html">Новости</a></li>
-                    <li  class="active"><a href="contact-us.html">Контакты</a></li>
+                    <li class="active"><a href="contact-us.html">Контакты</a></li>
                 </ul>
             </div>
         </div><!--/.container-->
@@ -98,7 +97,7 @@
 
     <section id="contact-info">
         <div class="center">                
-            <h2>Как к нам добраться?</h2>
+            <h2>Наши контакты</h2>
         </div>
         <div class="gmap-area">
             <div class="container wow fadeInDown" data-wow-duration="600ms" data-wow-delay="600ms">
@@ -116,13 +115,35 @@
                     <div class="col-sm-7 map-content">
 
 
-                                <div class="col-xs-6">
+                                <div class="col-sm-6">
                                     <address>
                                         <h5>Адрес</h5>
                                         <p>461060,<br> Оренбургская обл,Курманевский р, с.Курманаевка</p>
                                     </address>
                                 </div>
-
+                    </div>
+                    <div class="col-sm-7 col-xs-7 map-content">
+                        <div class="col-sm-12 col-xs-12">
+                            <p class="arbeit_title">Как мы работаем</p>
+                        </div>
+                        <div class="col-sm-4 col-xs-4">
+                                Понедельник<br>
+                                Вторник<br>
+                                Среда<br>
+                                Четверг<br>
+                                Пятница<br>
+                                Суббота<br>
+                                Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-4">
+                            8.00 - 20.00<br>
+                            8.00 - 19.00<br>
+                            8.00 - 20.00<br>
+                            8.00 - 19.00<br>
+                            8.00 - 18.00<br>
+                            выходной<br>
+                            выходной
+                        </div>
                     </div>
                 </div>
             </div>
@@ -172,23 +193,24 @@
 
 <footer id="footer" class="midnight-blue">
     <div class="container">
-        <div class="col-xs-2">
+        <div class="col-sm-2 col-xs-12 text-center">
             <a href="/" class="logotype">
                 <img src="images/logotype-gray.svg" style="width: 160px">
             </a>
         </div>
-        <div class="col-xs-6 col-xs-offset-1">
+        <div class="col-sm-6 col-sm-offset-1 col-xs-6">
             <ul class="list-inline mb-20">
-                <li><a href="/">Главная</a></li>
-                <li><a href="/services">Услуги</a></li>
-                <li><a href="/posts">Новости</a></li>
-                <li><a href="/about">О нас</a></li>
-                <li><a href="/departments">Филиалы и контакты</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="news.html">Новости</a></li>
+                <li><a href="documents.html">Документы</a></li>
+                <li><a href="gallery.html">Фотогалерея</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
             </ul>
             <div class="mb-20 footerorg"><p>Государственное автономное учреждение «Многофункциональный центр предоставления государственных и муниципальных услуг Курманаевского района»</p>
             </div>
         </div>
-        <div class="col-xs-3 rpfooter">
+        <div class="col-sm-3 col-sm-offset-0 col-xs-5 col-xs-offset-1 rpfooter">
             <a href="tel:88001002216" class="main-phone mb-20"><span class="fa fa-phone-square"></span> 8 800 100-22-16</a>
             <p>461060, Оренбургская обл,Курманевский р, с.Курманаевка</p>
 
@@ -199,31 +221,8 @@
                 .sociallinks a {margin-left: 3px;}
                 .sociallinks a:first-child {margin-left: 0px !important;}
             </style>
-
-            <div class="sociallinks">
-                <a target="_blank" href="http://www.vk.com/mdsakha">         <img src="http://mfcsakha.ru/files/social/vk.png"></a>
-                <a target="_blank" href="http://www.facebook.com/mdsakha14"> <img src="http://mfcsakha.ru/files/social/fb.png"></a>
-                <a target="_blank" href="http://www.twitter.com/mdsakha">    <img src="http://mfcsakha.ru/files/social/tw.png"></a>
-                <a target="_blank" href="http://www.ok.ru/mdsakha">          <img src="http://mfcsakha.ru/files/social/ok.png"></a>
-                <!--<a target="_blank" href="http://www.instagram.com/">  <img src="http://mfcsakha.ru/files/social/in.png"></a>-->
-            </div>
         </div>
     </div>
-    <!--<div class="container">-->
-    <!--<div class="row">-->
-    <!--<div class="col-sm-6">-->
-    <!--<p>&copy; МФЦ Курманаевского р-на</p>-->
-    <!--<p>Все права защищены. 2015.г</p>-->
-    <!--</div>-->
-    <!--<div class="col-sm-6">-->
-    <!--<ul class="pull-right">-->
-    <!--<li><a href="#">Главная</a></li>-->
-    <!--<li><a href="#">О нас</a></li>-->
-    <!--<li><a href="#">Контакты</a></li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
 </footer><!--/#footer-->
 
     <script src="js/jquery.js"></script>
