--- a/404.html
+++ b/404.html
@@ -24,161 +24,117 @@
 </head><!--/head-->
 <body>
 
-    <header id="header">
-        <div class="top-bar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  +0123 456 70 90</p></div>
-                    </div>
-                    <div class="col-sm-6 col-xs-8">
-                       <div class="social">
-                            <ul class="social-share">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                            </ul>
-                            <div class="search">
-                                <form role="form">
-                                    <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                           </div>
-                       </div>
+<header id="header">
+    <div class="top-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-xs-4">
+                    <div class="top-number"><p><i class="fa fa-phone-square"></i>  +8353 43 217 79</p></div>
+                </div>
+                <div class="col-sm-6 col-xs-8 text-right">
+                    <!--<div class="social">-->
+                    <!--<ul class="social-share">-->
+                    <!--<li><a href="#"><i class="fa fa-vk"></i></a></li>-->
+                    <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+                    <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-twitter"></i></a></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-linkedin"></i></a></li> &ndash;&gt;-->
+                    <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
+                    <!--</ul>-->
+                    <!--&lt;!&ndash;<div class="search">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<form role="form">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<input type="text" class="search-form" autocomplete="off" placeholder="поиск">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<i class="fa fa-search"></i>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</form>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                    <!--</div>-->
+                    <div class="login_btn">
+                        <a href="#">Войти</a>
+                        <a href="#">Зарегистрироваться</a>
                     </div>
                 </div>
-            </div><!--/.container-->
-        </div><!--/.top-bar-->
+            </div>
+        </div><!--/.container-->
+    </div><!--/.top-bar-->
 
-        <nav class="navbar navbar-inverse" role="banner">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
-                </div>
-                
-                <div class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li class="dropdown active">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Blog Single</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li class="active"><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="blog.html">Blog</a></li> 
-                        <li><a href="contact-us.html">Contact</a></li>                        
-                    </ul>
-                </div>
-            </div><!--/.container-->
-        </nav><!--/nav-->
-        
-    </header><!--/header-->
+    <nav class="navbar navbar-inverse" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html"><img src="images/logotype_gor.svg" alt="logo"></a>
+            </div>
+
+            <div class="collapse navbar-collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Главная</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Услуги <i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="service-1.html">По ведомствам</a></li>
+                            <li><a href="service-1.html">Жизненные ситуации</a></li>
+                            <li><a href="service-1.html">Все услуги</a></li>
+                            <li><a href="service-1.html">Записаться в очередь</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="about-us.html">О нас</a></li>
+                    <li><a href="documents.html">Документы</a></li>
+                    <li><a href="gallery.html">Фотогалерея</a></li>
+                    <li><a href="news.html">Новости</a></li>
+                    <li><a href="contact-us.html">Контакты</a></li>
+                </ul>
+            </div>
+        </div><!--/.container-->
+    </nav><!--/nav-->
+
+</header><!--/header-->
 
     <section id="error" class="container text-center">
         <h1>404, Page not found</h1>
-        <p>The Page you are looking for doesn't exist or an other error occurred.</p>
-        <a class="btn btn-primary" href="index.html">GO BACK TO THE HOMEPAGE</a>
+        <p>Данной страницы не существует</p>
+        <a class="btn btn-primary" href="index.html">Вернуться на главную страница</a>
     </section><!--/#error-->
 
-    <section id="bottom">
-        <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Company</h3>
-                        <ul>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">We are hiring</a></li>
-                            <li><a href="#">Meet the team</a></li>
-                            <li><a href="#">Copyright</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy policy</a></li>
-                            <li><a href="#">Contact us</a></li>
-                        </ul>
-                    </div>    
-                </div><!--/.col-md-3-->
 
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Support</h3>
-                        <ul>
-                            <li><a href="#">Faq</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Refund policy</a></li>
-                            <li><a href="#">Ticket system</a></li>
-                            <li><a href="#">Billing system</a></li>
-                        </ul>
-                    </div>    
-                </div><!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Developers</h3>
-                        <ul>
-                            <li><a href="#">Web Development</a></li>
-                            <li><a href="#">SEO Marketing</a></li>
-                            <li><a href="#">Theme</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Email Marketing</a></li>
-                            <li><a href="#">Plugin Development</a></li>
-                            <li><a href="#">Article Writing</a></li>
-                        </ul>
-                    </div>    
-                </div><!--/.col-md-3-->
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="widget">
-                        <h3>Our Partners</h3>
-                        <ul>
-                            <li><a href="#">Adipisicing Elit</a></li>
-                            <li><a href="#">Eiusmod</a></li>
-                            <li><a href="#">Tempor</a></li>
-                            <li><a href="#">Veniam</a></li>
-                            <li><a href="#">Exercitation</a></li>
-                            <li><a href="#">Ullamco</a></li>
-                            <li><a href="#">Laboris</a></li>
-                        </ul>
-                    </div>    
-                </div><!--/.col-md-3-->
+<footer id="footer" class="midnight-blue">
+    <div class="container">
+        <div class="col-sm-2 col-xs-12 text-center">
+            <a href="/" class="logotype">
+                <img src="images/logotype-gray.svg" style="width: 160px">
+            </a>
+        </div>
+        <div class="col-sm-6 col-sm-offset-1 col-xs-6">
+            <ul class="list-inline mb-20">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="news.html">Новости</a></li>
+                <li><a href="documents.html">Документы</a></li>
+                <li><a href="gallery.html">Фотогалерея</a></li>
+                <li><a href="about-us.html">О нас</a></li>
+                <li><a href="contact-us.html">Контакты</a></li>
+            </ul>
+            <div class="mb-20 footerorg"><p>Государственное автономное учреждение «Многофункциональный центр предоставления государственных и муниципальных услуг Курманаевского района»</p>
             </div>
         </div>
-    </section><!--/#bottom-->
+        <div class="col-sm-3 col-sm-offset-0 col-xs-5 col-xs-offset-1 rpfooter">
+            <a href="tel:88001002216" class="main-phone mb-20"><span class="fa fa-phone-square"></span> 8 800 100-22-16</a>
+            <p>461060, Оренбургская обл,Курманевский р, с.Курманаевка</p>
 
-    <footer id="footer" class="midnight-blue">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
-                </div>
-                <div class="col-sm-6">
-                    <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
+            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=mfc@mfcsakha.ru" class="mail" target="_blank"><span class="fa fa-envelope-o"></span> mfc@kurman.ru</a>
+
+            <style>
+                .sociallinks {margin-top: 8px;}
+                .sociallinks a {margin-left: 3px;}
+                .sociallinks a:first-child {margin-left: 0px !important;}
+            </style>
         </div>
-    </footer><!--/#footer-->
+    </div>
+</footer><!--/#footer-->
 
-    <script src="js/jquery.js"></script>
+
+<script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/jquery.isotope.min.js"></script>
