--- a/404.html
+++ b/404.html
@@ -28,25 +28,10 @@
     <div class="top-bar">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-xs-4">
+                <div class="col-sm-6 col-xs-6">
                     <div class="top-number"><p><i class="fa fa-phone-square"></i>  +8353 43 217 79</p></div>
                 </div>
-                <div class="col-sm-6 col-xs-8 text-right">
-                    <!--<div class="social">-->
-                    <!--<ul class="social-share">-->
-                    <!--<li><a href="#"><i class="fa fa-vk"></i></a></li>-->
-                    <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-                    <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-twitter"></i></a></li>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-linkedin"></i></a></li> &ndash;&gt;-->
-                    <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
-                    <!--</ul>-->
-                    <!--&lt;!&ndash;<div class="search">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<form role="form">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<input type="text" class="search-form" autocomplete="off" placeholder="поиск">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<i class="fa fa-search"></i>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</form>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--</div>-->
+                <div class="col-sm-6 col-xs-6 text-right">
                     <div class="login_btn">
                         <a href="#">Войти</a>
                         <a href="#">Зарегистрироваться</a>
@@ -95,7 +80,7 @@
     <section id="error" class="container text-center">
         <h1>404, Page not found</h1>
         <p>Данной страницы не существует</p>
-        <a class="btn btn-primary" href="index.html">Вернуться на главную страница</a>
+        <a class="btn btn-primary" href="index.html"></a>
     </section><!--/#error-->
 
 
