--- a/index.html
+++ b/index.html
@@ -30,25 +30,10 @@
         <div class="top-bar">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 col-xs-4">
+                    <div class="col-sm-6 col-xs-6">
                         <div class="top-number"><p><i class="fa fa-phone-square"></i>  +8353 43 217 79</p></div>
                     </div>
-                    <div class="col-sm-6 col-xs-8 text-right">
-                       <!--<div class="social">-->
-                            <!--<ul class="social-share">-->
-                                <!--<li><a href="#"><i class="fa fa-vk"></i></a></li>-->
-                                <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-twitter"></i></a></li>&ndash;&gt;-->
-                                <!--&lt;!&ndash;<li><a href="#"><i class="fa fa-linkedin"></i></a></li> &ndash;&gt;-->
-                                <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
-                            <!--</ul>-->
-                            <!--&lt;!&ndash;<div class="search">&ndash;&gt;-->
-                                <!--&lt;!&ndash;<form role="form">&ndash;&gt;-->
-                                    <!--&lt;!&ndash;<input type="text" class="search-form" autocomplete="off" placeholder="поиск">&ndash;&gt;-->
-                                    <!--&lt;!&ndash;<i class="fa fa-search"></i>&ndash;&gt;-->
-                                <!--&lt;!&ndash;</form>&ndash;&gt;-->
-                           <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                       <!--</div>-->
+                    <div class="col-sm-6 col-xs-6 text-right">
                        <div class="login_btn">
                            <a href="#">Войти</a>
                            <a href="#">Зарегистрироваться</a>
@@ -695,10 +680,10 @@
 
             <div class="partners">
                 <ul>
-                    <li> <a href="http://government.ru/"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/Government.ru_logo.png" alt=""></a></li>
-                    <li> <a href="http://economy.gov.ru/minec/main"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/logo-mineconom-jpg.png" alt=""></a></li>
-                    <li> <a href="https://www.gosuslugi.ru/"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/gosusl.png" alt=""></a></li>
-                    <li> <a href="https://vashkontrol.ru"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/vkk.png" alt=""></a></li>
+                    <li class="col-xs-12 col-sm-3"> <a href="http://government.ru/"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/Government.ru_logo.png" alt=""></a></li>
+                    <li class="col-xs-12 col-sm-3"> <a href="http://economy.gov.ru/minec/main"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/logo-mineconom-jpg.png" alt=""></a></li>
+                    <li class="col-xs-12 col-sm-3"> <a href="https://www.gosuslugi.ru/"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/gosusl.png" alt=""></a></li>
+                    <li class="col-xs-12 col-sm-3"> <a href="https://vashkontrol.ru"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/vkk.png" alt=""></a></li>
                     <!--<li> <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/partner5.png"></a></li>-->
                 </ul>
             </div>        
@@ -723,71 +708,6 @@
         </div><!--/.container-->    
     </section><!--/#conatcat-info-->
 
-    <!--<section id="bottom">-->
-        <!--<div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">-->
-            <!--<div class="row">-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<div class="widget">-->
-                        <!--<h3>Company</h3>-->
-                        <!--<ul>-->
-                            <!--<li><a href="#">About us</a></li>-->
-                            <!--<li><a href="#">We are hiring</a></li>-->
-                            <!--<li><a href="#">Meet the team</a></li>-->
-                            <!--<li><a href="#">Copyright</a></li>-->
-                            <!--<li><a href="#">Terms of use</a></li>-->
-                            <!--<li><a href="#">Privacy policy</a></li>-->
-                            <!--<li><a href="#">Contact us</a></li>-->
-                        <!--</ul>-->
-                    <!--</div>    -->
-                <!--</div>&lt;!&ndash;/.col-md-3&ndash;&gt;-->
-
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<div class="widget">-->
-                        <!--<h3>Support</h3>-->
-                        <!--<ul>-->
-                            <!--<li><a href="#">Faq</a></li>-->
-                            <!--<li><a href="#">Blog</a></li>-->
-                            <!--<li><a href="#">Forum</a></li>-->
-                            <!--<li><a href="#">Documentation</a></li>-->
-                            <!--<li><a href="#">Refund policy</a></li>-->
-                            <!--<li><a href="#">Ticket system</a></li>-->
-                            <!--<li><a href="#">Billing system</a></li>-->
-                        <!--</ul>-->
-                    <!--</div>    -->
-                <!--</div>&lt;!&ndash;/.col-md-3&ndash;&gt;-->
-
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<div class="widget">-->
-                        <!--<h3>Developers</h3>-->
-                        <!--<ul>-->
-                            <!--<li><a href="#">Web Development</a></li>-->
-                            <!--<li><a href="#">SEO Marketing</a></li>-->
-                            <!--<li><a href="#">Theme</a></li>-->
-                            <!--<li><a href="#">Development</a></li>-->
-                            <!--<li><a href="#">Email Marketing</a></li>-->
-                            <!--<li><a href="#">Plugin Development</a></li>-->
-                            <!--<li><a href="#">Article Writing</a></li>-->
-                        <!--</ul>-->
-                    <!--</div>    -->
-                <!--</div>&lt;!&ndash;/.col-md-3&ndash;&gt;-->
-
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<div class="widget">-->
-                        <!--<h3>Our Partners</h3>-->
-                        <!--<ul>-->
-                            <!--<li><a href="#">Adipisicing Elit</a></li>-->
-                            <!--<li><a href="#">Eiusmod</a></li>-->
-                            <!--<li><a href="#">Tempor</a></li>-->
-                            <!--<li><a href="#">Veniam</a></li>-->
-                            <!--<li><a href="#">Exercitation</a></li>-->
-                            <!--<li><a href="#">Ullamco</a></li>-->
-                            <!--<li><a href="#">Laboris</a></li>-->
-                        <!--</ul>-->
-                    <!--</div>    -->
-                <!--</div>&lt;!&ndash;/.col-md-3&ndash;&gt;-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</section>&lt;!&ndash;/#bottom&ndash;&gt;-->
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
@@ -796,7 +716,7 @@
                     <img src="images/logotype-gray.svg" style="width: 160px">
                 </a>
             </div>
-            <div class="col-sm-6 col-sm-offset-1 col-xs-6">
+            <div class="col-sm-6 col-sm-offset-1 hidden-xs">
                 <ul class="list-inline mb-20">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="news.html">Новости</a></li>
@@ -808,7 +728,7 @@
                 <div class="mb-20 footerorg"><p>Государственное автономное учреждение «Многофункциональный центр предоставления государственных и муниципальных услуг Курманаевского района»</p>
                 </div>
             </div>
-            <div class="col-sm-3 col-sm-offset-0 col-xs-5 col-xs-offset-1 rpfooter">
+            <div class="col-sm-3 col-xs-12 rpfooter">
                 <a href="tel:88001002216" class="main-phone mb-20"><span class="fa fa-phone-square"></span> 8 800 100-22-16</a>
                 <p>461060, Оренбургская обл,Курманевский р, с.Курманаевка</p>
 
