--- a/service_item.html
+++ b/service_item.html
@@ -30,10 +30,10 @@
     <div class="top-bar">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-xs-4">
+                <div class="col-sm-6 col-xs-6">
                     <div class="top-number"><p><i class="fa fa-phone-square"></i>  +8353 43 217 79</p></div>
                 </div>
-                <div class="col-sm-6 col-xs-8 text-right">
+                <div class="col-sm-6 col-xs-6 text-right">
                     <div class="login_btn">
                         <a href="#">Войти</a>
                         <a href="#">Зарегистрироваться</a>
@@ -227,7 +227,7 @@
                 <img src="images/logotype-gray.svg" style="width: 160px">
             </a>
         </div>
-        <div class="col-sm-6 col-sm-offset-1 col-xs-6">
+        <div class="col-sm-6 col-sm-offset-1 hidden-xs">
             <ul class="list-inline mb-20">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="news.html">Новости</a></li>
@@ -239,7 +239,7 @@
             <div class="mb-20 footerorg"><p>Государственное автономное учреждение «Многофункциональный центр предоставления государственных и муниципальных услуг Курманаевского района»</p>
             </div>
         </div>
-        <div class="col-sm-3 col-sm-offset-0 col-xs-5 col-xs-offset-1 rpfooter">
+        <div class="col-sm-3 col-xs-12 rpfooter">
             <a href="tel:88001002216" class="main-phone mb-20"><span class="fa fa-phone-square"></span> 8 800 100-22-16</a>
             <p>461060, Оренбургская обл,Курманевский р, с.Курманаевка</p>
 
@@ -253,7 +253,6 @@
         </div>
     </div>
 </footer><!--/#footer-->
-<!--/#footer-->
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
