--- a/about-us.html
+++ b/about-us.html
@@ -32,25 +32,10 @@
 	<div class="top-bar">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 col-xs-4">
+				<div class="col-sm-6 col-xs-6">
 					<div class="top-number"><p><i class="fa fa-phone-square"></i>  +8353 43 217 79</p></div>
 				</div>
-				<div class="col-sm-6 col-xs-8 text-right">
-					<!--<div class="social">-->
-					<!--<ul class="social-share">-->
-					<!--<li><a href="#"><i class="fa fa-vk"></i></a></li>-->
-					<!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-					<!--&lt;!&ndash;<li><a href="#"><i class="fa fa-twitter"></i></a></li>&ndash;&gt;-->
-					<!--&lt;!&ndash;<li><a href="#"><i class="fa fa-linkedin"></i></a></li> &ndash;&gt;-->
-					<!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
-					<!--</ul>-->
-					<!--&lt;!&ndash;<div class="search">&ndash;&gt;-->
-					<!--&lt;!&ndash;<form role="form">&ndash;&gt;-->
-					<!--&lt;!&ndash;<input type="text" class="search-form" autocomplete="off" placeholder="поиск">&ndash;&gt;-->
-					<!--&lt;!&ndash;<i class="fa fa-search"></i>&ndash;&gt;-->
-					<!--&lt;!&ndash;</form>&ndash;&gt;-->
-					<!--&lt;!&ndash;</div>&ndash;&gt;-->
-					<!--</div>-->
+				<div class="col-sm-6 col-xs-6 text-right">
 					<div class="login_btn">
 						<a href="#">Войти</a>
 						<a href="#">Зарегистрироваться</a>
@@ -134,7 +119,7 @@
 				<img src="images/logotype-gray.svg" style="width: 160px">
 			</a>
 		</div>
-		<div class="col-sm-6 col-sm-offset-1 col-xs-6">
+		<div class="col-sm-6 col-sm-offset-1 hidden-xs">
 			<ul class="list-inline mb-20">
 				<li><a href="index.html">Главная</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -146,7 +131,7 @@
 			<div class="mb-20 footerorg"><p>Государственное автономное учреждение «Многофункциональный центр предоставления государственных и муниципальных услуг Курманаевского района»</p>
 			</div>
 		</div>
-		<div class="col-sm-3 col-sm-offset-0 col-xs-5 col-xs-offset-1 rpfooter">
+		<div class="col-sm-3 col-xs-12 rpfooter">
 			<a href="tel:88001002216" class="main-phone mb-20"><span class="fa fa-phone-square"></span> 8 800 100-22-16</a>
 			<p>461060, Оренбургская обл,Курманевский р, с.Курманаевка</p>
 
