--- a/contact-us.html
+++ b/contact-us.html
@@ -103,7 +103,8 @@
                                 <div class="col-sm-6">
                                     <address>
                                         <h5>Адрес</h5>
-                                        <p>461060,<br> Оренбургская обл,Курманевский р, с.Курманаевка</p>
+                                        <p><b>Адрес:</b> Оренбургская обл., 461060,<br> Курманевский р-н., с. Курманаевка <br>пл.Ленина, д.1</p>
+
                                     </address>
                                 </div>
                     </div>
@@ -196,7 +197,8 @@
         </div>
         <div class="col-sm-3 col-xs-12 rpfooter">
             <a href="tel:88001002216" class="main-phone mb-20"><span class="fa fa-phone-square"></span> 8 800 100-22-16</a>
-            <p>461060, Оренбургская обл,Курманевский р, с.Курманаевка</p>
+            <p><b>Адрес:</b> Оренбургская обл., 461060,<br> Курманевский р-н., с. Курманаевка <br>пл.Ленина, д.1</p>
+
 
             <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=mfc@mfcsakha.ru" class="mail" target="_blank"><span class="fa fa-envelope-o"></span> mfc@kurman.ru</a>
 
