--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@
     <section id="conatcat-info">
         <div class="container">
             <div class="row">
+                <span class="ram_1"></span>
+                <span class="ram_2"></span>
                 <div class="col-sm-8">
                     <div class="media contact-info wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="pull-left">
