new_style_and contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -87,7 +87,7 @@
         <div class="gmap-area">
             <div class="container wow fadeInDown" data-wow-duration="600ms" data-wow-delay="600ms">
                 <div class="row">
-                    <div class="col-sm-5 text-center">
+                    <div class="col-sm-6 text-center">
                         <div class="gmap" style="z-index: 10">
                             <div style="    margin-left: -120px;">
                                 <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=efaJ66YER6LpJuaiqLaZPOPkAIDanmdf&width=678&height=615&lang=ru_RU&sourceType=constructor"></script>
@@ -97,9 +97,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-7 map-content">
-
-
+                    <div class="col-sm-6 map-content">
                                 <div class="col-sm-6">
                                     <address>
                                         <h5>Адрес</h5>
@@ -108,7 +106,7 @@
                                     </address>
                                 </div>
                     </div>
-                    <div class="col-sm-7 col-xs-12 map-content">
+                    <div class="col-sm-6 col-xs-12 map-content">
                         <div class="col-sm-12 col-xs-12">
                             <p class="arbeit_title">Как мы работаем</p>
                         </div>
@@ -132,6 +130,39 @@
                         </div>
                     </div>
                 </div>
+                <!--<div class="row">-->
+                   <!-- -->
+                    <!--<div class="col-sm-6 col-xs-12">-->
+                        <!--<address>-->
+                            <!--<h5>Адрес</h5>-->
+                            <!--<p><b>Адрес:</b> Оренбургская обл., 461060,<br> Курманевский р-н., с. Курманаевка <br>пл.Ленина, д.1</p>-->
+
+                        <!--</address>-->
+                    <!--</div>-->
+                    <!--<div class="col-sm-6 col-xs-12 map-content">-->
+                        <!--<div class="col-sm-12 col-xs-12">-->
+                            <!--<p class="arbeit_title">Как мы работаем</p>-->
+                        <!--</div>-->
+                        <!--<div class="col-sm-4 col-xs-6">-->
+                            <!--Понедельник<br>-->
+                            <!--Вторник<br>-->
+                            <!--Среда<br>-->
+                            <!--Четверг<br>-->
+                            <!--Пятница<br>-->
+                            <!--Суббота<br>-->
+                            <!--Воскресенье-->
+                        <!--</div>-->
+                        <!--<div class="col-sm-4 col-xs-6">-->
+                            <!--8.00 - 20.00<br>-->
+                            <!--8.00 - 19.00<br>-->
+                            <!--8.00 - 20.00<br>-->
+                            <!--8.00 - 19.00<br>-->
+                            <!--8.00 - 18.00<br>-->
+                            <!--выходной<br>-->
+                            <!--выходной-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
     </section>  <!--/gmap_area -->
