--- a/contact-us.html
+++ b/contact-us.html
@@ -130,45 +130,230 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="row">-->
-                   <!-- -->
-                    <!--<div class="col-sm-6 col-xs-12">-->
-                        <!--<address>-->
-                            <!--<h5>Адрес</h5>-->
-                            <!--<p><b>Адрес:</b> Оренбургская обл., 461060,<br> Курманевский р-н., с. Курманаевка <br>пл.Ленина, д.1</p>-->
-
-                        <!--</address>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-6 col-xs-12 map-content">-->
-                        <!--<div class="col-sm-12 col-xs-12">-->
-                            <!--<p class="arbeit_title">Как мы работаем</p>-->
-                        <!--</div>-->
-                        <!--<div class="col-sm-4 col-xs-6">-->
-                            <!--Понедельник<br>-->
-                            <!--Вторник<br>-->
-                            <!--Среда<br>-->
-                            <!--Четверг<br>-->
-                            <!--Пятница<br>-->
-                            <!--Суббота<br>-->
-                            <!--Воскресенье-->
-                        <!--</div>-->
-                        <!--<div class="col-sm-4 col-xs-6">-->
-                            <!--8.00 - 20.00<br>-->
-                            <!--8.00 - 19.00<br>-->
-                            <!--8.00 - 20.00<br>-->
-                            <!--8.00 - 19.00<br>-->
-                            <!--8.00 - 18.00<br>-->
-                            <!--выходной<br>-->
-                            <!--выходной-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
             </div>
         </div>
     </section>  <!--/gmap_area -->
 
-    <section id="contact-page">
+    <section>
+
+        <!-- block adres filials-->
         <div class="container wow fadeInDown" data-wow-duration="600ms" data-wow-delay="600ms">
+            <div class=" center">
+                <h2>Территориально обособленные структурные подразделения</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-xs-12 adres_block">
+                    <div class="col-xs-12">
+                        <h2>Подразделения № 5 МАУ «МФЦ Курманаевского района»</h2>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <address>
+                            <h5 class="arbeit_title">Адрес</h5>
+                            <p><b>Адрес:</b>  село Грачевка ул. Пролетарская д. 6</p>
+
+                        </address>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 map-content">
+                        <div class="col-xs-12">
+                            <h5 class="arbeit_title">Как мы работаем</h5>
+                        </div>
+                        <div class="col-sm-4 col-xs-5">
+                            Понедельник<br>
+                            Вторник<br>
+                            Среда<br>
+                            Четверг<br>
+                            Пятница<br>
+                            Суббота<br>
+                            Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-6">
+                            выходной<br>
+                            8.00 - 13.00<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-10 col-xs-12 adres_block">
+                    <div class="col-xs-12">
+                        <h2>Подразделения № 5 МАУ «МФЦ Курманаевского района»</h2>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <address>
+                            <h5 class="arbeit_title">Адрес</h5>
+                            <p><b>Адрес:</b>  село Грачевка ул. Пролетарская д. 6</p>
+
+                        </address>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 map-content">
+                        <div class="col-xs-12">
+                            <h5 class="arbeit_title">Как мы работаем</h5>
+                        </div>
+                        <div class="col-sm-4 col-xs-5">
+                            Понедельник<br>
+                            Вторник<br>
+                            Среда<br>
+                            Четверг<br>
+                            Пятница<br>
+                            Суббота<br>
+                            Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-6">
+                            выходной<br>
+                            8.00 - 13.00<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-10 col-xs-12 adres_block">
+                    <div class="col-xs-12">
+                        <h2>Подразделения № 5 МАУ «МФЦ Курманаевского района»</h2>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <address>
+                            <h5 class="arbeit_title">Адрес</h5>
+                            <p><b>Адрес:</b>  село Грачевка ул. Пролетарская д. 6</p>
+
+                        </address>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 map-content">
+                        <div class="col-xs-12">
+                            <h5 class="arbeit_title">Как мы работаем</h5>
+                        </div>
+                        <div class="col-sm-4 col-xs-5">
+                            Понедельник<br>
+                            Вторник<br>
+                            Среда<br>
+                            Четверг<br>
+                            Пятница<br>
+                            Суббота<br>
+                            Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-6">
+                            выходной<br>
+                            8.00 - 13.00<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-10 col-xs-12 adres_block">
+                    <div class="col-xs-12">
+                        <h2>Подразделения № 5 МАУ «МФЦ Курманаевского района»</h2>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <address>
+                            <h5 class="arbeit_title">Адрес</h5>
+                            <p><b>Адрес:</b>  село Грачевка ул. Пролетарская д. 6</p>
+
+                        </address>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 map-content">
+                        <div class="col-xs-12">
+                            <h5 class="arbeit_title">Как мы работаем</h5>
+                        </div>
+                        <div class="col-sm-4 col-xs-5">
+                            Понедельник<br>
+                            Вторник<br>
+                            Среда<br>
+                            Четверг<br>
+                            Пятница<br>
+                            Суббота<br>
+                            Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-6">
+                            выходной<br>
+                            8.00 - 13.00<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-10 col-xs-12 adres_block">
+                    <div class="col-xs-12">
+                        <h2>Подразделения № 5 МАУ «МФЦ Курманаевского района»</h2>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <address>
+                            <h5 class="arbeit_title">Адрес</h5>
+                            <p><b>Адрес:</b>  село Грачевка ул. Пролетарская д. 6</p>
+
+                        </address>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 map-content">
+                        <div class="col-xs-12">
+                            <h5 class="arbeit_title">Как мы работаем</h5>
+                        </div>
+                        <div class="col-sm-4 col-xs-5">
+                            Понедельник<br>
+                            Вторник<br>
+                            Среда<br>
+                            Четверг<br>
+                            Пятница<br>
+                            Суббота<br>
+                            Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-6">
+                            выходной<br>
+                            8.00 - 13.00<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-10 col-xs-12 adres_block">
+                    <div class="col-xs-12">
+                        <h2>Подразделения № 5 МАУ «МФЦ Курманаевского района»</h2>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <address>
+                            <h5 class="arbeit_title">Адрес</h5>
+                            <p><b>Адрес:</b>  село Грачевка ул. Пролетарская д. 6</p>
+
+                        </address>
+                    </div>
+                    <div class="col-sm-6 col-xs-12 map-content">
+                        <div class="col-xs-12">
+                            <h5 class="arbeit_title">Как мы работаем</h5>
+                        </div>
+                        <div class="col-sm-4 col-xs-5">
+                            Понедельник<br>
+                            Вторник<br>
+                            Среда<br>
+                            Четверг<br>
+                            Пятница<br>
+                            Суббота<br>
+                            Воскресенье
+                        </div>
+                        <div class="col-sm-4 col-xs-6">
+                            выходной<br>
+                            8.00 - 13.00<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной<br>
+                            выходной
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="center">        
                 <h2>Оставьте Ваше сообщение</h2>
                 <p class="lead">Если есть вопросы,можете написать нам,мы постараемся ответить вам в ближайшее время</p>
@@ -206,6 +391,11 @@
                 </form> 
             </div><!--/.row-->
         </div><!--/.container-->
+        <!-- block adres filials-->
+
+
+
+        
     </section><!--/#contact-page-->
 <footer id="footer" class="midnight-blue">
     <div class="container">
